--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,25 +1,32 @@
 ---
 interface Props {
+  brow_text?: string;
 	title: string;
 	body: string;
-	href: string;
+	image?: string;
+	alt_text?: string;
+  additionalClasses?: string;
 }
 
-const { href, title, body } = Astro.props;
+const { brow_text, title, image, body, alt_text, additionalClasses = '' } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
+<div class={`card ${additionalClasses}`}>
+  {brow_text && <p class="brow-text">{brow_text}</p>}
+	<h2 class="text-xl">{title}</h2>
+	{image && <img src={image} alt={alt_text} />}
+	<div class="flex flex-col">
+		<p>{body}</p>
+		<slot />
+	</div>
+</div>
 <style>
+	.card {
+    	@apply flex flex-col h-fit gap-4 p-10 bg-white text-black rounded-tl-2xl rounded-br-2xl rounded-tr-sm rounded-bl-sm min-w-[580px] max-w-[580px] min-h-[580px] shadow-md transition-all duration-300 ease-in-out hover:shadow-lg hover:-translate-y-1;
+  	}
+    .brow-text {
+      @apply text-gray-500 font-medium text-xl;
+    }
 	.link-card {
 		list-style: none;
 		display: flex;
