--- a/src/components/Row.astro
+++ b/src/components/Row.astro
@@ -9,7 +9,7 @@ interface Props {
 const { title, date, categories, href } = Astro.props;
 ---
 
-<a href={href} class="row" data-row>
+<a href={href} class="row" data-row data-date={date} data-categories={categories.join(',')}>
   <div class="marker"></div>
   <div class="details">
     <h3>{title}</h3>
@@ -25,7 +25,7 @@ const { title, date, categories, href } = Astro.props;
 
 <style>
   .row {
-    @apply bg-white p-4 rounded-md flex items-start gap-5 max-w-[580px] border border-white transition-all duration-300 ease-in-out hover:shadow-lg hover:-mt-1 hover:mb-1 cursor-pointer;
+    @apply bg-white p-4 rounded-md w-full max-w-[640px] flex items-start gap-5 border border-white transition-all duration-300 ease-in-out hover:shadow-lg hover:-mt-1 hover:mb-1 cursor-pointer;
   }
   .marker {
     @apply mt-3 block w-3 h-3 min-w-3 min-h-3 rounded-full bg-red-500 transition-all duration-300 ease-in-out;
