--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
 interface Props {
 	title: string;
+	body_classes?: string;
 }
 
-const { title } = Astro.props;
+const { title, body_classes = '' } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,7 +17,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class={`${body_classes}`}>
 		<div class="coordinate-grid">
 			<div id="column-coordinates" class="column-coordinates"></div>
 			<div id="row-coordinates" class="row-coordinates"></div>
@@ -34,11 +35,10 @@ const { title } = Astro.props;
 
 				const width = window.innerWidth;
 				const height = window.innerHeight;
-
 				// Clear existing coordinates and grid lines
-				columnCoords.innerHTML = '';
-				rowCoords.innerHTML = '';
-				gridLines.innerHTML = '';
+				if (columnCoords) columnCoords.innerHTML = '';
+				if (rowCoords) rowCoords.innerHTML = '';
+				if (gridLines) gridLines.innerHTML = '';
 
 				// Generate column coordinates and vertical grid lines
 				for (let i = 0; i <= width; i += 200) {
@@ -46,12 +46,14 @@ const { title } = Astro.props;
 					span.className = 'coordinate';
 					span.textContent = i.toString();
 					span.style.left = `${(i / width) * 100}%`;
-					columnCoords.appendChild(span);
+					columnCoords?.appendChild(span);
 
 					const line = document.createElement('div');
 					line.className = 'grid-line vertical';
 					line.style.left = `${(i / width) * 100}%`;
-					gridLines.appendChild(line);
+					if (gridLines) {
+						gridLines.appendChild(line);
+					}
 				}
 
 				// Generate row coordinates and horizontal grid lines
@@ -60,16 +62,20 @@ const { title } = Astro.props;
 					span.className = 'coordinate';
 					span.textContent = numberToLetter(Math.floor(i / 200));
 					span.style.top = `${(i / height) * 100}%`;
-					rowCoords.appendChild(span);
+					if (rowCoords) {
+						rowCoords.appendChild(span);
+					}
 
 					const line = document.createElement('div');
 					line.className = 'grid-line horizontal';
 					line.style.top = `${(i / height) * 100}%`;
-					gridLines.appendChild(line);
+					if (gridLines) {
+						gridLines.appendChild(line);
+					}
 				}
 			}
 
-			function numberToLetter(num) {
+			function numberToLetter(num: number): string {
 				let letter = '';
 				while (num >= 0) {
 					letter = String.fromCharCode(65 + (num % 26)) + letter;
@@ -88,7 +94,6 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--base-light: #F9F7F5;
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
 		--accent-dark: 49, 10, 101;
@@ -100,7 +105,7 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		@apply bg-[var(--base-light)] text-black;
+		@apply bg-light-base dark:bg-dark-base text-light-text dark:text-dark-text;
 	}
 	code {
 		font-family:
@@ -117,13 +122,13 @@ const { title } = Astro.props;
 		@apply relative min-h-screen;
 	}
 	.coordinate-grid {
-		@apply absolute top-0 left-0 w-full h-full pointer-events-none;
+		@apply font-mono absolute top-0 left-0 w-full h-full pointer-events-none bg-blend-overlay opacity-25 text-black text-[10px];
 	}
 	.column-coordinates {
-		@apply absolute py-4 ml-4 top-2 left-0 w-full flex justify-between px-4 text-xs text-gray-400;
+		@apply absolute py-4 ml-4 top-2 left-0 w-full flex justify-between px-4;
 	}
 	.row-coordinates {
-		@apply pt-32 px-4 absolute top-0 left-2 h-full flex flex-col justify-between py-4 text-xs text-gray-400;
+		@apply pt-32 px-4 absolute top-0 left-2 h-full flex flex-col justify-between py-4;
 	}
 	.coordinate {
 		@apply inline-block;
@@ -132,10 +137,10 @@ const { title } = Astro.props;
 		@apply relative z-10;
 	}
 	.grid-lines {
-		@apply absolute top-0 left-0 w-full h-full opacity-50;
+		@apply absolute top-0 left-0 w-full h-full opacity-30;
 	}
 	.grid-line {
-		@apply absolute border-dotted border-gray-300;
+		@apply absolute border-dotted border-black;
 	}
 	.grid-line.vertical {
 		@apply h-full border-l;
