--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -3,7 +3,7 @@ import '../styles/global.css';
 
 interface Props {
   href?: string;
-  onClick?: () => void;
+  onClick?: string;
   type?: 'link' | 'button';
   additionalClasses?: string;
   children: any;
@@ -17,13 +17,13 @@ const { href, onClick, type = 'button', additionalClasses = '', children } = Ast
     <slot />
   </a>
 ) : (
-  <button onClick={onClick} class="button ${additionalClasses}">
+  <button onclick={onClick} class={`button ${additionalClasses}`}>
     <slot />
   </button>
 )}
 
 <style>
   .button {
-    @apply bg-black p-2 px-4 rounded-md mt-4 text-white;
+    @apply bg-black p-2 px-4 rounded-md mt-4 text-white text-center;
   }
 </style>
