--- a/src/components/Row.astro
+++ b/src/components/Row.astro
@@ -25,7 +25,7 @@ const { title, date, categories, href } = Astro.props;
 
 <style>
   .row {
-    @apply bg-white p-4 rounded-md w-full max-w-[640px] flex items-start gap-5 border border-white transition-all duration-300 ease-in-out hover:shadow-lg hover:-mt-1 hover:mb-1 cursor-pointer;
+    @apply bg-light-paper dark:bg-dark-paper text-light-text dark:text-dark-text p-4 rounded-md w-full max-w-[640px] flex items-start gap-5 border border-light-border dark:border-dark-border transition-all duration-300 ease-in-out hover:shadow-lg hover:-mt-1 hover:mb-1 cursor-pointer;
   }
   .marker {
     @apply mt-3 block w-3 h-3 min-w-3 min-h-3 rounded-full bg-red-500 transition-all duration-300 ease-in-out;
