--- a/src/components/PageTitle.astro
+++ b/src/components/PageTitle.astro
@@ -8,7 +8,7 @@ interface Props {
 const { line1, line2, additionalClasses = '' } = Astro.props;
 ---
 
-<h1 class={`flex flex-col gap-2 ${additionalClasses}`}>
+<h1 class={`flex flex-col my-8 ${additionalClasses}`}>
   <span>{line1}</span>
   <span>{line2}</span>
 </h1>
