--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -137,7 +137,7 @@ const allCategories = [...new Set(thoughts.flatMap(thought => thought.categories
 
 <style>
   .categories-list {
-    @apply mt-10;
+    @apply mt-10 max-w-80;
   }
   [data-row] {
     transition: opacity 0.3s ease-in-out;
