--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,9 @@ const breadcrumbs = [
 <TwoColumnLayout
   layout_body_classes="bg-[url('/hero.png')] bg-cover"
   title="Karina Tovar - Product Designer"
+  pageTitle="Karina Tovar"
   breadcrumbs={breadcrumbs}
-  pageTitle={{
+  asideTitle={{
     line1: "Product Designer",
     line2: "Pixel Philosopher"
   }}
