--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -24,8 +24,9 @@ const sortedYears = Object.keys(projectsByYear).sort((a, b) => parseInt(b) - par
 <TwoColumnLayout
   layout_body_classes="bg-[url('/hero.png')] bg-cover"
   title="Karina Tovar - My Work"
+  pageTitle="My Work"
   breadcrumbs={breadcrumbs}
-  pageTitle={{
+  asideTitle={{
     line1: "Happy Pixels",
     line2: "Better Lives"
   }}
